--- a/css/forum.css
+++ b/css/forum.css
@@ -133,6 +133,19 @@ hr {
   opacity: 1;
 }
 
-.table {
+/* .table {
 width: 1000px;
+} */
+
+#container2 {
+  display: flex;
+  
+}
+
+.section-left{
+  flex: 2;
+}
+.section-right {
+  flex: 1;
+  padding-left: 20px;
 }
