--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,10 @@
     }
     
     .navbar {
-
+        position: sticky;
+        top: 0;
         padding: 0;
+        
     }
 
 
@@ -83,7 +85,7 @@
 
     .container-fluid {
         background-color: #2B2E44;
-        
+  
         
     }
     #navbarSupportedContent ul li a {
